# abilian-crm-core

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  noxfile.py  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
abilian/crm/: __init__.py  extension.py  forms.py  jinja_filters.py  models.py  widgets.py
abilian/crm/excel/: __init__.py  exc.py  manager.py  tasks.py  util.py  views.py
abilian/crm/excel/columns/: __init__.py  base.py  dates.py  misc.py  postaladdress.py  related.py  tags.py  vocabulary.py  yearly.py
abilian/crm/generator/: __init__.py  autoname.py  codegen.py  definitions.py  module.py
abilian/crm/generator/fieldtypes/: __init__.py  base.py  entity.py  formfields.py  phonenumber.py  postaladdress.py  registry.py  simple.py  tests.py  vocabulary.py  yearly.py
abilian/crm/static/js/: async_export.js
abilian/crm/templates/crm/widgets/: macros.html  phonenumber_fieldlist.html  phonenumber_fieldlist_view.html
abilian/crm/tests/: test_jinja_filters.py
abilian/crm/translations/: messages.pot
abilian/crm/translations/en/LC_MESSAGES/: messages.po
abilian/crm/translations/fr/LC_MESSAGES/: messages.po
etc/: dev-requirements.txt
src/abilian/crm/: forms.py
src/abilian/crm/excel/: manager.py  views.py
src/abilian/crm/generator/: codegen.py
src/abilian/crm/generator/fieldtypes/: __init__.py  entity.py  simple.py
tests/: test_fieldtypes.py
